        * To discuss Apache OpenJPA topics check out the mailing lists.
        * Informal discussion also occurs on the #openjpa IRC channel on
          freenode.net.
        * Bugs and other issues can be posted on the project JIRA.


Included Changes in OpenJPA 2.0.0
---------------------------------

Sub-task
--------
    * [OPENJPA-1179] - openjpa.jdbc.QuerySQLCache plugin values

Bug
---
    * [OPENJPA-1510] - Documentation corrections
    * [OPENJPA-1550] - When batchLimit=-1 or >1 and an exception is caused, the params and failedObject are missing from the resultant exception.
    * [OPENJPA-1559] - DataCacheManager initialization isn't thread safe.
    * [OPENJPA-1569] - @Strategy triggers an InvalidStateException for fields which are declared as Java interfaces
    * [OPENJPA-1597] - Need Compatibility setting for new OPENJPA-1097 Proxies and DetachedStateField behavior
    * [OPENJPA-1599] - Cache mode properties passes in to em.find and lock methods are not transient
    * [OPENJPA-1602] - Query with lock mode set to PESSIMISTIC_WRITE does not have for update clause attached to the sql when runs twice
    * [OPENJPA-1604] - Setting PessimisticLockManager fails to append "for update clause" to the select statement
    * [OPENJPA-1608] - PESSIMISTIC_WRITE is not working in Informix
    * [OPENJPA-1609] - PessimisticLockException instead of LockTimeoutException thrown on DB2V9 for ZOS
    * [OPENJPA-1611] - Wrong PersistentAttributeType returned for @Embedded types
    * [OPENJPA-1618] - Exception during factory creation due to javax.persistence.transactionType
    * [OPENJPA-1625] - Inconsistent creation of StateManagerImpl in BrokerImpl

Improvement
-----------
    * [OPENJPA-1382] - make org.apache.openjpa.persistence.meta.AnnotationProcessor6 as service
    * [OPENJPA-1545] - Add new Detach processing
    * [OPENJPA-1603] - Decouple the QueryCache from the DataCache
    * [OPENJPA-1622] - Invoking MetaModel generator

Task
----